book/tests/snapshots/snapshot__run_reference_prql@transforms__sort-5.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/transforms/sort-5.prql
---
WITH table_1 AS (
  SELECT
    *
  FROM
    employees
  ORDER BY
    tenure
)
SELECT
  table_1.*,
  locations.*
FROM
  table_1
  JOIN locations ON table_1.employee_id = locations.employee_id
