book/tests/snapshots/snapshot__run_reference_prql@transforms__union-and-concat-0.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/transforms/union-and-concat-0.prql
---
(
  SELECT
    *
  FROM
    employees_1
)
UNION
ALL
SELECT
  *
FROM
  employees_2
